# qdrantrs-port

./: .gitmodules  CHANGELOG.md  Cargo.toml  Dashboard-Migration-Sprints.md  README.md  cargo_check_error.txt  cargo_check_output.txt  cargo_check_output_2.txt  cargo_check_output_3.txt  cargo_check_output_4.txt  cargo_check_output_5.txt  cargo_check_output_6.txt  cargo_check_output_7.txt  cargo_check_output_8.txt  cliff.toml  ports.md
.agent/workflows/: cargo.md
config/: config.yaml
docs/: api-gap-analysis.md  compilation_audit.md  ipc-contract.md  migration_refactoring_plan.md  project_status_report.md  tokio-architecture.md  work_summary_phase_3_start.md
examples/: indexer.rs  local.rs  searcher.rs
src/: client.rs  config.rs  error.rs  helpers.rs  instance.rs  lib.rs
src/ops/: collections.rs  mod.rs  points.rs  query.rs
