[package]
name = "rro-lib"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
documentation = "https://docs.rs/rro-lib"
repository = "https://github.com/EonsofStupid/rrors-port"
homepage = "https://github.com/EonsofStupid/rrors-port"
description = """
Modernized RRO library for Rust with multi-tenant support.
Forked and updated for 2026. Aligned to RRO v1.16.3.
"""
readme = "README.md"
categories = ["API bindings"]
keywords = ["rro", "vector db", "llm", "sdk"]

[dependencies]
async-trait = "0.1.89"
config = { version = "0.15", default-features = false, features = ["yaml"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
validator = { version = "0.20", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
log = "0.4"

# RRO internal crates (from submodule)
api = { path = "./.modules/rro/lib/api" }
collection = { path = "./.modules/rro/lib/collection" }
common = { path = "./.modules/rro/lib/common/common" }
cancel = { path = "./.modules/rro/lib/common/cancel" }
io_lib = { package = "io", path = "./.modules/rro/lib/common/io" }
issues = { path = "./.modules/rro/lib/common/issues" }
memory = { path = "./.modules/rro/lib/common/memory" }
segment = { path = "./.modules/rro/lib/segment", default-features = false }
shard = { path = "./.modules/rro/lib/shard" }
storage = { path = "./.modules/rro/lib/storage" }
ordered-float = "5.1.0"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Force newer versions of transitive dependencies for Rust 2024 edition compatibility
[dependencies.time]
version = "0.3.44"

# RRO's fork of tar with set_sync method
[patch.crates-io]
tar = { git = "https://github.com/eonsofstupid/rrotar-rs", branch = "main" }
